update readme and add remaining pictures

--- a/index.html
+++ b/index.html
@@ -11,4 +11,13 @@
     <meta name="author" content="Kyle Smithgall" />
     <title>Around the US</title>
     <link rel="stylesheet" href="./pages/index.css" />
-</html>
+    <body>
+      <header>
+
+      </header>
+      <main>
+        <h1>Hallo world</h1>
+      </main>
+      <footer></footer>
+    </body>
+    </html>
