add markup for header and profile blocks

--- a/index.html
+++ b/index.html
@@ -10,14 +10,30 @@
     <meta name="keywords" content="Photos, Adventure, US, Around the US" />
     <meta name="author" content="Kyle Smithgall" />
     <title>Around the US</title>
+    <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <body>
-      <header>
-
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img
+          src="./images/logo-white_aroundtheus.svg"
+          alt="white version of the Around the US logo"
+          class="header__logo"
+        />
       </header>
       <main>
-        <h1>Hallo world</h1>
+        <section class="profile">
+          <img
+            src="./images/avatar.png"
+            alt="Profile picture of an older man wearing a red cap"
+            class="profile__avatar"
+          />
+          <h1 class="profile__title">Jacques Cousteau</h1>
+          <p class="profile__subtitle">Explorer</p>
+        </section>
       </main>
-      <footer></footer>
-    </body>
-    </html>
+      <footer class="footer"></footer>
+    </div>
+  </body>
+</html>
