--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
-  <body>
-    <div class="page">
+  <body class="page">
+    <div class="page__content">
       <header class="header">
         <img
           src="./images/logo-white_aroundtheus.svg"
@@ -25,12 +25,16 @@
       <main>
         <section class="profile">
           <img
-            src="./images/avatar.png"
+            src="./images/jacques-cousteau.jpg"
             alt="Profile picture of an older man wearing a red cap"
             class="profile__avatar"
           />
-          <h1 class="profile__title">Jacques Cousteau</h1>
-          <p class="profile__subtitle">Explorer</p>
+          <div class="profile__info">
+            <h1 class="profile__title">Jacques Cousteau</h1>
+            <button class="profile__edit-button"></button>
+            <p class="profile__subtitle">Explorer</p>
+          </div>
+          <button class="profile__add-button"></button>
         </section>
       </main>
       <footer class="footer"></footer>
