--- a/index.html
+++ b/index.html
@@ -36,6 +36,94 @@
           </div>
           <button class="profile__add-button"></button>
         </section>
+        <ul class="cards">
+          <li class="card">
+            <img
+              src="./images/yosemite.jpg"
+              alt="Yosemite"
+              class="card__image"
+            />
+            <div class="card__info">
+              <p class="card__title">Yosemite Valley</p>
+              <img
+                src="./images/heart.svg"
+                alt="Clickable heart icon"
+                class="card__heart-icon"
+              />
+            </div>
+          </li>
+          <li class="card">
+            <img
+              src="./images/lake-louise.jpg"
+              alt="Lake Louise"
+              class="card__image"
+            />
+            <div class="card__info">
+              <p class="card__title">Lake Louise</p>
+              <img
+                src="./images/heart.svg"
+                alt="Clickable heart icon"
+                class="card__heart-icon"
+              />
+            </div>
+          </li>
+          <li class="card">
+            <img
+              src="./images/bald-mountains.jpg"
+              alt="Bald Mountains"
+              class="card__image"
+            />
+            <div class="card__info">
+              <p class="card__title">Bald Mountains</p>
+              <img
+                src="./images/heart.svg"
+                alt="Clickable heart icon"
+                class="card__heart-icon"
+              />
+            </div>
+          </li>
+          <li class="card">
+            <img src="./images/latemar.jpg" alt="Latemar" class="card__image" />
+            <div class="card__info">
+              <p class="card__title">Latemar</p>
+              <img
+                src="./images/heart.svg"
+                alt="Clickable heart icon"
+                class="card__heart-icon"
+              />
+            </div>
+          </li>
+          <li class="card">
+            <img
+              src="./images/vanoise.jpg"
+              alt="Vanoise National Park"
+              class="card__image"
+            />
+            <div class="card__info">
+              <p class="card__title">Vanoise National Park</p>
+              <img
+                src="./images/heart.svg"
+                alt="Clickable heart icon"
+                class="card__heart-icon"
+              />
+            </div>
+          </li>
+          <li class="card">
+            <img
+              src="./images/lake-louise.jpg"
+              alt="Lake Louise"
+              class="card__image"
+            />
+            <div class="card__info">
+              <p class="card__title">Lake Louise</p>
+              <img
+                src="./images/heart.svg"
+                alt="Clickable heart icon"
+                class="card__heart-icon"
+              />
+            </div>
+          </li>
+        </ul>
       </main>
       <footer class="footer"></footer>
     </div>
