added footer and responsive media queries

--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
           </li>
           <li class="card">
             <img
-              src="./images/lake-louise.jpg"
-              alt="Lake Louise"
+              src="./images/lago.jpg"
+              alt="Lago di Braies"
               class="card__image"
             />
             <div class="card__info">
-              <p class="card__title">Lake Louise</p>
+              <p class="card__title">Lago di Braies</p>
               <img
                 src="./images/heart.svg"
                 alt="Clickable heart icon"
@@ -125,7 +125,9 @@
           </li>
         </ul>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <p class="footer__copyright">© 2022 Around The U.S.</p>
+      </footer>
     </div>
   </body>
 </html>
