Updated image alt tags and README page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li class="card">
             <img
               src="./images/yosemite.jpg"
-              alt="Yosemite"
+              alt="A photo of Yosemite valley, showing a rushing river surrounded by trees, with a large mountain in the background."
               class="card__image"
             />
             <div class="card__info">
@@ -55,7 +55,7 @@
           <li class="card">
             <img
               src="./images/lake-louise.jpg"
-              alt="Lake Louise"
+              alt="A photo of Lake Louise, showcasing green-blue water framed by two towering mountains."
               class="card__image"
             />
             <div class="card__info">
@@ -70,7 +70,7 @@
           <li class="card">
             <img
               src="./images/bald-mountains.jpg"
-              alt="Bald Mountains"
+              alt="A photo of Bald Mountains, showing peaks stretching across the horizon, blanketed by our bright orange sun just before sunset."
               class="card__image"
             />
             <div class="card__info">
@@ -83,7 +83,11 @@
             </div>
           </li>
           <li class="card">
-            <img src="./images/latemar.jpg" alt="Latemar" class="card__image" />
+            <img
+              src="./images/latemar.jpg"
+              alt="A photo of the slate-colored Latemar mountains beneath a dark-blue starry sky."
+              class="card__image"
+            />
             <div class="card__info">
               <p class="card__title">Latemar</p>
               <img
@@ -96,7 +100,7 @@
           <li class="card">
             <img
               src="./images/vanoise.jpg"
-              alt="Vanoise National Park"
+              alt="A photo of Vanoise National Park, showing a stoney beach and a great mountain reflected against the lake during dusk."
               class="card__image"
             />
             <div class="card__info">
@@ -111,7 +115,7 @@
           <li class="card">
             <img
               src="./images/lago.jpg"
-              alt="Lago di Braies"
+              alt="A photo of Lago di Braies, showcasing a dock and several red-orange boats floating atop a clear lake, framed by a mountain range."
               class="card__image"
             />
             <div class="card__info">
