Revisions before second submission

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button class="profile__edit-button" type="button"></button>
             <p class="profile__subtitle">Explorer</p>
           </div>
-          <button class="profile__add-button"></button>
+          <button class="profile__add-button" type="button"></button>
         </section>
         <ul class="cards">
           <li class="card">
@@ -44,12 +44,8 @@
               class="card__image"
             />
             <div class="card__info">
-              <p class="card__title">Yosemite Valley</p>
-              <img
-                src="./images/heart.svg"
-                alt="Clickable heart icon"
-                class="card__heart-icon"
-              />
+              <h2 class="card__title">Yosemite Valley</h2>
+              <button class="card__heart-icon" type="button"></button>
             </div>
           </li>
           <li class="card">
@@ -59,12 +55,8 @@
               class="card__image"
             />
             <div class="card__info">
-              <p class="card__title">Lake Louise</p>
-              <img
-                src="./images/heart.svg"
-                alt="Clickable heart icon"
-                class="card__heart-icon"
-              />
+              <h2 class="card__title">Lake Louise</h2>
+              <button class="card__heart-icon" type="button"></button>
             </div>
           </li>
           <li class="card">
@@ -74,12 +66,8 @@
               class="card__image"
             />
             <div class="card__info">
-              <p class="card__title">Bald Mountains</p>
-              <img
-                src="./images/heart.svg"
-                alt="Clickable heart icon"
-                class="card__heart-icon"
-              />
+              <h2 class="card__title">Bald Mountains</h2>
+              <button class="card__heart-icon" type="button"></button>
             </div>
           </li>
           <li class="card">
@@ -89,12 +77,8 @@
               class="card__image"
             />
             <div class="card__info">
-              <p class="card__title">Latemar</p>
-              <img
-                src="./images/heart.svg"
-                alt="Clickable heart icon"
-                class="card__heart-icon"
-              />
+              <h2 class="card__title">Latemar</h2>
+              <button class="card__heart-icon" type="button"></button>
             </div>
           </li>
           <li class="card">
@@ -104,12 +88,8 @@
               class="card__image"
             />
             <div class="card__info">
-              <p class="card__title">Vanoise National Park</p>
-              <img
-                src="./images/heart.svg"
-                alt="Clickable heart icon"
-                class="card__heart-icon"
-              />
+              <h2 class="card__title">Vanoise National Park</h2>
+              <button class="card__heart-icon" type="button"></button>
             </div>
           </li>
           <li class="card">
@@ -119,12 +99,8 @@
               class="card__image"
             />
             <div class="card__info">
-              <p class="card__title">Lago di Braies</p>
-              <img
-                src="./images/heart.svg"
-                alt="Clickable heart icon"
-                class="card__heart-icon"
-              />
+              <h2 class="card__title">Lago di Braies</h2>
+              <button class="card__heart-icon" type="button"></button>
             </div>
           </li>
         </ul>
