--- a/index.html
+++ b/index.html
@@ -109,6 +109,31 @@
         <p class="footer__copyright">© 2022 Around The U.S.</p>
       </footer>
     </div>
+    <div class="modal">
+      <div class="modal__container">
+        <button type="button" name="close" class="modal__close"></button>
+        <h3 class="modal__heading">Edit Profile</h3>
+        <form class="modal__form">
+          <fieldset class="modal__form-fieldset">
+            <input
+              type="text"
+              name="name"
+              class="modal__form-input"
+              placeholder="Jacques Cousteau"
+            />
+            <input
+              type="text"
+              name="about-me"
+              class="modal__form-input"
+              placeholder="Explorer"
+            />
+          </fieldset>
+          <button type="button" name="save" class="modal__form-button">
+            Save
+          </button>
+        </form>
+      </div>
+    </div>
 
     <script src="./scripts/index.js"></script>
   </body>
