Add JS code for form fields and profile editing

--- a/index.html
+++ b/index.html
@@ -126,18 +126,20 @@
           <fieldset class="modal__form-fieldset">
             <input
               type="text"
-              name="name"
+              name="title"
               class="modal__form-input"
+              id="profile-title-input"
               placeholder="Jacques Cousteau"
             />
             <input
               type="text"
-              name="about-me"
+              name="subtitle"
               class="modal__form-input"
+              id="profile-subtitle-input"
               placeholder="Explorer"
             />
           </fieldset>
-          <button type="button" name="save" class="modal__form-button">
+          <button type="submit" name="save" class="modal__form-button">
             Save
           </button>
         </form>
