--- a/index.html
+++ b/index.html
@@ -40,74 +40,7 @@
           </div>
           <button class="profile__add-button" type="button"></button>
         </section>
-        <ul class="cards">
-          <li class="card">
-            <img
-              src="./images/yosemite.jpg"
-              alt="A photo of Yosemite valley, showing a rushing river surrounded by trees, with a large mountain in the background."
-              class="card__image"
-            />
-            <div class="card__info">
-              <h2 class="card__title">Yosemite Valley</h2>
-              <button class="card__heart-icon" type="button"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./images/lake-louise.jpg"
-              alt="A photo of Lake Louise, showcasing green-blue water framed by two towering mountains."
-              class="card__image"
-            />
-            <div class="card__info">
-              <h2 class="card__title">Lake Louise</h2>
-              <button class="card__heart-icon" type="button"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./images/bald-mountains.jpg"
-              alt="A photo of Bald Mountains, showing peaks stretching across the horizon, blanketed by our bright orange sun just before sunset."
-              class="card__image"
-            />
-            <div class="card__info">
-              <h2 class="card__title">Bald Mountains</h2>
-              <button class="card__heart-icon" type="button"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./images/latemar.jpg"
-              alt="A photo of the slate-colored Latemar mountains beneath a dark-blue starry sky."
-              class="card__image"
-            />
-            <div class="card__info">
-              <h2 class="card__title">Latemar</h2>
-              <button class="card__heart-icon" type="button"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./images/vanoise.jpg"
-              alt="A photo of Vanoise National Park, showing a stoney beach and a great mountain reflected against the lake during dusk."
-              class="card__image"
-            />
-            <div class="card__info">
-              <h2 class="card__title">Vanoise National Park</h2>
-              <button class="card__heart-icon" type="button"></button>
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./images/lago.jpg"
-              alt="A photo of Lago di Braies, showcasing a dock and several red-orange boats floating atop a clear lake, framed by a mountain range."
-              class="card__image"
-            />
-            <div class="card__info">
-              <h2 class="card__title">Lago di Braies</h2>
-              <button class="card__heart-icon" type="button"></button>
-            </div>
-          </li>
-        </ul>
+        <ul class="cards"></ul>
       </main>
       <footer class="footer">
         <p class="footer__copyright">© 2022 Around The U.S.</p>
@@ -145,6 +78,15 @@
         </form>
       </div>
     </div>
+    <template id="card-template">
+      <li class="card">
+        <img src="" alt="" class="card__image" />
+        <div class="card__info">
+          <h2 class="card__title"></h2>
+          <button class="card__heart-icon" type="button"></button>
+        </div>
+      </li>
+    </template>
 
     <script src="./scripts/index.js"></script>
   </body>
