--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           class="modal__close"
         ></button>
         <h3 class="modal__heading">Edit Profile</h3>
-        <form class="modal__form">
+        <form class="modal__form" id="modal-profile-form">
           <fieldset class="modal__form-fieldset">
             <input
               type="text"
