feat/ add card addition functionality and refactor

--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
               name="title"
               class="modal__form-input"
               id="add-card-title-input"
-              placeholder="Jacques Cousteau"
+              placeholder="Title"
             />
             <input
               type="text"
-              name="url"
+              name="link"
               class="modal__form-input"
-              id="add-card-url-input"
-              placeholder="Explorer"
+              id="add-card-link-input"
+              placeholder="Image Link"
             />
           </fieldset>
-          <button type="submit" name="save" class="modal__form-button">
+          <button type="submit" name="create" class="modal__form-button">
             Create
           </button>
         </form>
