style/ add delete-icon with hover effect

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
     <template id="card-template">
       <li class="card">
         <img src="" alt="" class="card__image" />
+        <button class="card__delete-icon" type="button"></button>
         <div class="card__info">
           <h2 class="card__title"></h2>
           <button class="card__heart-icon" type="button"></button>
