feat/ add picture modal and styling

--- a/index.html
+++ b/index.html
@@ -113,6 +113,20 @@
       </div>
     </div>
 
+    <!-- Picture Modal -->
+    <div class="modal" id="picture-modal">
+      <div class="modal__picture-container">
+        <img src="./images/bald-mountains.jpg" alt="" class="modal__picture" />
+        <button
+          type="button"
+          name="close"
+          id="modal-close-button"
+          class="modal__close modal__close_picture"
+        ></button>
+        <h3 class="modal__picture-caption">New Place</h3>
+      </div>
+    </div>
+
     <template id="card-template">
       <li class="card">
         <img src="" alt="" class="card__image" />
