feat/ add JS functionality for picture modal open/close

--- a/index.html
+++ b/index.html
@@ -49,12 +49,7 @@
     <!-- Edit Profile Modal -->
     <div class="modal" id="profile-edit-modal">
       <div class="modal__container">
-        <button
-          type="button"
-          name="close"
-          id="modal-close-button"
-          class="modal__close"
-        ></button>
+        <button type="button" name="close" class="modal__close"></button>
         <h3 class="modal__heading">Edit Profile</h3>
         <form class="modal__form" id="modal-profile-form">
           <fieldset class="modal__form-fieldset">
@@ -82,12 +77,7 @@
     <!-- Add Card Modal -->
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
-        <button
-          type="button"
-          name="close"
-          id="modal-close-button"
-          class="modal__close"
-        ></button>
+        <button type="button" name="close" class="modal__close"></button>
         <h3 class="modal__heading">New Place</h3>
         <form class="modal__form" id="add-card-form">
           <fieldset class="modal__form-fieldset">
@@ -116,7 +106,7 @@
     <!-- Picture Modal -->
     <div class="modal" id="picture-modal">
       <div class="modal__picture-container">
-        <img src="./images/bald-mountains.jpg" alt="" class="modal__picture" />
+        <img src="" alt="" class="modal__picture" />
         <button
           type="button"
           name="close"
