fix/ set default image for picture modal

--- a/index.html
+++ b/index.html
@@ -102,11 +102,10 @@
         </form>
       </div>
     </div>
-
     <!-- Picture Modal -->
     <div class="modal" id="picture-modal">
       <div class="modal__picture-container">
-        <img src="" alt="" class="modal__picture" />
+        <img src="./images/yosemite.jpg" alt="" class="modal__picture" />
         <button
           type="button"
           name="close"
