--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="modal__container">
         <button type="button" name="close" class="modal__close"></button>
         <h3 class="modal__heading">Edit Profile</h3>
-        <form class="modal__form" id="modal-profile-form">
+        <form name="profile-form" id="modal-profile-form" class="modal__form">
           <fieldset class="modal__form-fieldset">
             <input
               type="text"
@@ -79,7 +79,7 @@
       <div class="modal__container">
         <button type="button" name="close" class="modal__close"></button>
         <h3 class="modal__heading">New Place</h3>
-        <form class="modal__form" id="add-card-form">
+        <form name="card-form" id="add-card-form" class="modal__form">
           <fieldset class="modal__form-fieldset">
             <input
               type="text"
