--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
               class="modal__form-input"
               id="profile-title-input"
               placeholder="Title"
+              minlength="2"
+              maxlength="40"
+              required
             />
             <input
               type="text"
@@ -66,6 +69,9 @@
               class="modal__form-input"
               id="profile-subtitle-input"
               placeholder="Image URL"
+              minlength="2"
+              maxlength="200"
+              required
             />
           </fieldset>
           <button type="submit" name="save" class="modal__form-button">
@@ -87,13 +93,17 @@
               class="modal__form-input"
               id="add-card-title-input"
               placeholder="Title"
+              minlength="1"
+              maxlength="30"
+              required
             />
             <input
-              type="text"
+              type="url"
               name="link"
               class="modal__form-input"
               id="add-card-link-input"
               placeholder="Image Link"
+              required
             />
           </fieldset>
           <button type="submit" name="create" class="modal__form-button">
@@ -127,5 +137,6 @@
       </li>
     </template>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validation.js"></script>
   </body>
 </html>
