--- a/index.html
+++ b/index.html
@@ -53,26 +53,32 @@
         <h3 class="modal__heading">Edit Profile</h3>
         <form name="profile-form" id="modal-profile-form" class="modal__form">
           <fieldset class="modal__form-fieldset">
-            <input
-              type="text"
-              name="title"
-              class="modal__form-input"
-              id="profile-title-input"
-              placeholder="Title"
-              minlength="2"
-              maxlength="40"
-              required
-            />
-            <input
-              type="text"
-              name="subtitle"
-              class="modal__form-input"
-              id="profile-subtitle-input"
-              placeholder="Image URL"
-              minlength="2"
-              maxlength="200"
-              required
-            />
+            <label class="modal__label">
+              <input
+                type="text"
+                name="title"
+                class="modal__form-input"
+                id="profile-title-input"
+                placeholder="Title"
+                minlength="2"
+                maxlength="40"
+                required
+              />
+              <span class="modal__error">This is a test</span>
+            </label>
+            <label class="modal__label">
+              <input
+                type="text"
+                name="subtitle"
+                class="modal__form-input"
+                id="profile-subtitle-input"
+                placeholder="Image URL"
+                minlength="2"
+                maxlength="200"
+                required
+              />
+              <span class="modal__error">This is a test</span>
+            </label>
           </fieldset>
           <button type="submit" name="save" class="modal__form-button">
             Save
@@ -87,24 +93,30 @@
         <h3 class="modal__heading">New Place</h3>
         <form name="card-form" id="add-card-form" class="modal__form">
           <fieldset class="modal__form-fieldset">
-            <input
-              type="text"
-              name="title"
-              class="modal__form-input"
-              id="add-card-title-input"
-              placeholder="Title"
-              minlength="1"
-              maxlength="30"
-              required
-            />
-            <input
-              type="url"
-              name="link"
-              class="modal__form-input"
-              id="add-card-link-input"
-              placeholder="Image Link"
-              required
-            />
+            <label class="modal__label">
+              <input
+                type="text"
+                name="title"
+                class="modal__form-input"
+                id="add-card-title-input"
+                placeholder="Title"
+                minlength="1"
+                maxlength="30"
+                required
+              />
+              <span class="modal__error">This is a Test</span>
+            </label>
+            <label class="modal__label">
+              <input
+                type="url"
+                name="link"
+                class="modal__form-input"
+                id="add-card-link-input"
+                placeholder="Image Link"
+                required
+              />
+              <span class="modal__error">This is a Test</span>
+            </label>
           </fieldset>
           <button type="submit" name="create" class="modal__form-button">
             Create
