--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 maxlength="40"
                 required
               />
-              <span class="modal__error">This is a test</span>
+              <span class="modal__error" id="profile-title-input-error"></span>
             </label>
             <label class="modal__label">
               <input
@@ -77,7 +77,10 @@
                 maxlength="200"
                 required
               />
-              <span class="modal__error">This is a test</span>
+              <span
+                class="modal__error"
+                id="profile-subtitle-input-error"
+              ></span>
             </label>
           </fieldset>
           <button type="submit" name="save" class="modal__form-button">
@@ -104,7 +107,7 @@
                 maxlength="30"
                 required
               />
-              <span class="modal__error">This is a Test</span>
+              <span class="modal__error" id="add-card-title-input-error"></span>
             </label>
             <label class="modal__label">
               <input
@@ -115,10 +118,16 @@
                 placeholder="Image Link"
                 required
               />
-              <span class="modal__error">This is a Test</span>
+              <span class="modal__error" id="add-card-link-input-error"></span>
             </label>
           </fieldset>
-          <button type="submit" name="create" class="modal__form-button">
+          <button
+            type="submit"
+            name="create"
+            id="card-submit-button"
+            class="modal__form-button modal__form-button_disabled"
+            disabled
+          >
             Create
           </button>
         </form>
